=cut

=head1 NAME

Sys::SigAction::Changes - List of significant changes

=head1 CHANGES

Revision history for Sys::SigAction.

=head2 Changes in Sys::SigAction 0.15  1 Jul 2011

Clean up POD. Close bug #69057. Other minor tweaks to POD.

=head2 Changes in Sys::SigAction 0.13  23 Jun 2011

No functional changes. Fix for test timeout.t.
Fix strict undefined symbol error in timeout.t, when Time::HiRes is not present.
Not sure if constant pragma will exist in all supported perl versions,
so, we just commented out the use strict in this test.

Print warning when Time::HiRes not found in Makefile.PL

=head2 Changes in Sys::SigAction 0.12  20 Jun 2011

Conditionally add 'LICENSE' => 'perl' to WriteMakefile()
call if $ExtUtils::MakeMaker::VERSION >= 6.3002.

Added support for timeout_call() in fractional seconds
expressed as a floating point number.  If Time::HiRes
is not loadable, then the timeout value is raised to the
next high integer value with the POSIX:ceil() funtion.

Added sig_alarm(), which timeout_call uses. This is drop
in replacement for alarm(). If Time::HiRes
is not loadable, then the seconds argument is raised to the
next high integer value with the POSIX:ceil() funtion.

Update sample code to use double evals in response 

   https://rt.cpan.org/Public/Bug/Display.html?id=50628

The bug author wrote: 

   Suppose the eval dies for some reason unrelated to the signal handling
   just before the alarm expires, and then the code exits the eval, and
   then the alarm expires before the final alarm(0) can be called. Now
   either the code will completely die because there is no SIGALRM
   handler in place to catch the signal, or the wrong handler (not the
   local handler) will be called.

Make the same change in timeout_call().  The change traps the 
remote possibility that an alarm signal could arrive 
between the time code dies (for some unrelated reason) and the 
final eval is called or called.


=head2 Changes in Sys::SigAction 0.11  31 Jan 2009
