@@ -20,10 +20,15 @@ DEPENDENCIES
 This module requires these other modules and libraries:
 
   Test::More
+  posix( sigactioni, ceil )
+
+This module will use the follow module if present:
+
+  Time::HiRes( ualarm) for fractional second timeouts. 
 
 COPYRIGHT AND LICENCE
 
-Copyright (c) 2004-2009 Lincoln A. Baxter
+Copyright (c) 2004-2013 Lincoln A. Baxter
 
 You may distribute under the terms of either the GNU General Public
 License or the Artistic License, as specified in the Perl README file,
